<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:textAlignment="center"
    tools:context=".RockPaperScissors">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Rock_Paper_Scissors"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:textAlignment="center">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/computerView"
                android:layout_width="209dp"
                android:layout_height="match_parent"
                android:text="@string/computerView"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/playerView"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:text="@string/playerView"
                android:textAlignment="center"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="398dp"
            android:layout_height="167dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="120dp"
                android:background="#00000000"
                android:contentDescription="@string/scissors"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/paper" />

            <LinearLayout
                android:layout_width="162dp"
                android:layout_height="334dp"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingRight="10dp">

                <ImageButton
                    android:id="@+id/imbthScissors"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:background="#00000000"
                    android:contentDescription="@string/scissors"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/scissor" />

                <ImageButton
                    android:id="@+id/imbtnRock"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:background="#00000000"
                    android:contentDescription="@string/scissors"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/rock" />

                <ImageButton
                    android:id="@+id/imbtnPaper"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="50dp"
                    android:background="#00000000"
                    android:contentDescription="@string/scissors"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/paper" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_choose_a_button"
                android:textAlignment="center"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="565dp">

            <Button
                android:id="@+id/back2"
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>